<resources>
    <string name="app_name">BhuSwami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="profile">My Profile</string>
    <string name="explore">Explore</string>
    <string name="myproperty">My Property</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_details">Add New Plot</string>
    <string name="select_image">Select Image</string>
    <string name="description">Plot Description</string>
    <string name="plot_price">Plot Price</string>
    <string name="plot_title">Title</string>
    <string name="short_title_demo">This is a demo title to show how it works</string>
    <string name="user_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log Out</string>
</resources>